--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"sf.crafter": "Crafting Station",
 	"sf.barrel": "Barrel",
-	"sf.sieve": "Sieve"
+	"sf.sieve": "Sieve",
+	"sf.silkworm": "Silk Worm"
 }
