--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -2,5 +2,6 @@
 	"sf.crafter": "Crafting Station",
 	"sf.barrel": "Barrel",
 	"sf.sieve": "Sieve",
-	"sf.silkworm": "Silk Worm"
+	"sf.silkworm": "Silk Worm",
+	"block.minecraft.red_sand": "Dust"
 }
