pebble and soulsand

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -4,5 +4,6 @@
 	"sf.sieve": "Sieve",
 	"sf.silkworm": "Silk Worm",
 	"block.minecraft.red_sand": "Dust",
-	"sf.stringmesh": "String Mesh"
+	"sf.stringmesh": "String Mesh",
+	"sf.pebble": "Stone Pebble"
 }
