crucible and wooden pickaxe fix

--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -5,5 +5,7 @@
 	"sf.silkworm": "Silk Worm",
 	"block.minecraft.red_sand": "Dust",
 	"sf.stringmesh": "String Mesh",
-	"sf.pebble": "Stone Pebble"
+	"sf.pebble": "Stone Pebble",
+	"sf.clay": "Porcelain Clay",
+	"sf.crucible": "Crucible"
 }
